--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@ quantum-geometry/public/*.webm filter=lfs diff=lfs merge=lfs -text
 quantum-geometry/public/zodiac/*.webm filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.webm filter=lfs diff=lfs merge=lfs -text
+public/**/*.webm filter=lfs diff=lfs merge=lfs -text
+public/**/*.mp4 filter=lfs diff=lfs merge=lfs -text
